[package]
name = "mustream-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI client for mustream"
license = "MIT"

[dependencies]
# TUI描画フレームワーク
ratatui = "0.26" 
# ターミナル制御とキー入力
crossterm = "0.27" 
# ロギングやデバッグなどに std::io::Error を簡単に Box<dyn Error> に変換するため
anyhow = "1.0"
rodio = { version = "0.17.3", features = ["mp3"] }
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }


